[package]
edition = "2018"
name = "rust-web-crawler-practice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
eyre = "0.6"
reqwest = {version = "0.10.8", features = ["blocking"]}
scraper = "0.12.0"
select = "0.5"
